--- a/.github/workflows/update_client.yml
+++ b/.github/workflows/update_client.yml
@@ -1,13 +1,15 @@
 name: Client Update Notification
+
 on:
   workflow_dispatch:
     inputs:
       cliente:
-        description: 'Nombre del cliente'
+        description: "Nombre del cliente actualizado"
         required: true
       usuario:
-        description: 'Usuario que actualiza'
+        description: "Usuario que actualiza el cliente"
         required: true
+
 jobs:
   notify:
     runs-on: ubuntu-latest
