--- a/.github/workflows/query_client.yml
+++ b/.github/workflows/query_client.yml
@@ -1,13 +1,15 @@
 name: Client Query Notification
+
 on:
   workflow_dispatch:
     inputs:
       cliente:
-        description: 'Nombre del cliente'
+        description: "Nombre del cliente consultado"
         required: true
       usuario:
-        description: 'Usuario que consulta'
+        description: "Usuario que realiza la consulta"
         required: true
+
 jobs:
   notify:
     runs-on: ubuntu-latest
