--- a/.github/workflows/query_client.yml
+++ b/.github/workflows/query_client.yml
@@ -2,17 +2,10 @@ name: Client Query Notification
 
 on:
   workflow_dispatch:
-    inputs:
-      cliente:
-        description: "Nombre del cliente consultado"
-        required: true
-      usuario:
-        description: "Usuario que realiza la consulta"
-        required: true
 
 jobs:
-  notify:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Notify Team
-        run: echo "CLIENT QUERY: ${{ github.event.inputs.cliente }}. Notifying team: ${{ github.event.inputs.usuario }}, Colaborador1, Colaborador2."
+      - name: Run simple notification
+        run: echo "CLIENT QUERY. Notification executed successfully."
